# SmartAgriculture

./: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: mlx_gaussian_refine.py
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: assets.rs  capture.rs  lib.rs  main.rs  realsense.rs  storage.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  form.tsx
web-preview/: index.html  server.mjs
