[package]
name = "smart-agriculture-tomato-twin"
version = "0.1.0"
description = "RealSense RGB-D capture and point-cloud export for mini tomato digital twins"
authors = ["SmartAgriculture"]
edition = "2024"
default-run = "smart-agriculture-tomato-twin"

[lib]
name = "smart_agriculture_tomato_twin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "6.0.0"
jpeg-encoder = "0.6.1"
libc = "0.2.177"
libloading = "0.8.6"
png = "0.17.16"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "2.4.0", features = [] }
thiserror = "2.0.9"
